force-app/main/default/objects/SIS_Assessment_Method_Assignment__c/SIS_Assessment_Method_Assignment__c.object-meta.xml
<CustomObject>
    <description>Objet de jonction entre les modalités d&apos;évaluation du cours et les compétences du cours.
Les compétences sont associés aux modalités d&apos;évaluation via cet objet.</description>
    <label>Assignement des modalités d&apos;évaluation</label>
    <nameField>
        <displayFormat>AMA-{0000}</displayFormat>
        <label>Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assignements des modalités d&apos;évaluation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>