force-app/main/default/objects/SIS_Assessment_Method_Assignment__c/fields/SIS_Assessment_Method_Assignment__c.field-meta.xml
<CustomField>
    <fullName>SIS_Assessment_Method_Assignment__c</fullName>
    <label>Assessment Method</label>
    <referenceTo>SIS_Evaluation_methods__c</referenceTo>
    <relationshipLabel>Course Skills</relationshipLabel>
    <relationshipName>Assessment_Method_Assignment</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>