force-app/main/default/objects/SIS_Assessment_Method_Assignment__c/fields/SIS_Course_Skill__c.field-meta.xml
<CustomField>
    <fullName>SIS_Course_Skill__c</fullName>
    <label>Course Skill</label>
    <referenceTo>Course_Skill__c</referenceTo>
    <relationshipLabel>Assessment Methods</relationshipLabel>
    <relationshipName>Assessment_Method_Assignment</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>